@@ -48,6 +48,7 @@
 #include <errno.h>
 
 #include <sys/types.h>
+#include <sys/poll.h>
 #include <sys/wait.h>
 #include <signal.h>
 
@@ -105,6 +106,12 @@ static gboolean platform_unsupported_cb   (GstTool *tool, GstReportLine *rline, 
 static gboolean report_finished_cb        (GstTool *tool, GstReportLine *rline, gpointer data);
 
 static void report_dispatch (GstTool *tool);
+static void poll_backend    (GstTool *tool);
+
+static void gst_tool_show_report_window (GstTool *tool, const gchar *report);
+static void gst_tool_hide_report_window (GstTool *tool);
+
+static gchar* gst_tool_read_line_from_backend (GstTool *tool);
 
 static GstReportHookEntry common_report_hooks[] = {
 /*        key                 function                    type                      allow_repeat user_data */
@@ -768,6 +775,8 @@ gst_tool_run_get_directive_va (GstTool *tool, const gchar *report_sign, const gc
 	tool->directive_running = TRUE;
 	gst_tool_idle_run_directives_remove (tool);
 
+	gst_dialog_freeze_visible (tool->main_dialog);
+	gst_tool_show_report_window (tool, report_sign);
 	gst_tool_send_directive (tool, directive, ap);
 
 	/* FIXME: Instead of doing the following, we should pass around a value describing
@@ -776,11 +785,11 @@ gst_tool_run_get_directive_va (GstTool *tool, const gchar *report_sign, const gc
 
 	xmlSubstituteEntitiesDefault (TRUE);
 
-	if (location_id == NULL)
-		report_progress (tool);
-
+	report_progress (tool);
 	xml = gst_tool_read_xml_from_backend(tool);
 
+	gst_tool_hide_report_window (tool);
+	gst_dialog_thaw_visible (tool->main_dialog);
 	tool->directive_running = FALSE;
 	gst_tool_idle_run_directives_add (tool);
 	
@@ -818,6 +827,8 @@ gst_tool_run_set_directive_va (GstTool *tool, xmlDoc *xml,
 		return NULL;
 	}
 
+	gst_dialog_freeze_visible (tool->main_dialog);
+	gst_tool_show_report_window (tool, report_sign);
 	gst_tool_send_directive (tool, directive, ap);
 
 	if (xml)
@@ -827,13 +838,14 @@ gst_tool_run_set_directive_va (GstTool *tool, xmlDoc *xml,
 	 * tool I/O mode (as opposed to a string to report_progress ()). */
 	tool->report_hook_type = GST_REPORT_HOOK_SAVE;
 
-	if (location_id == NULL)
-		report_progress (tool);
+	report_progress (tool);
 
 	/* This is tipicaly to just read the end of request string,
 	   but a set directive may return some XML too. */
 	xml_out = gst_tool_read_xml_from_backend (tool);
 
+	gst_tool_hide_report_window (tool);
+	gst_dialog_thaw_visible (tool->main_dialog);
 	tool->directive_running = FALSE;
 	gst_tool_idle_run_directives_add (tool);
 
@@ -1219,18 +1231,28 @@ gst_tool_create_remote_hosts_list (GtkTreeView *list, GstTool *tool)
 static void
 gst_tool_type_init (GstTool *tool)
 {
-	GladeXML *xml;
+	GdkPixbuf *pixbuf;
+	GladeXML  *xml;
 
+	tool->icon_theme = gtk_icon_theme_get_default ();
 	tool->glade_common_path  = g_strdup_printf ("%s/common.glade", INTERFACES_DIR);
 
-	tool->report_gui = xml  = gst_tool_load_glade_common (tool, "report_window");
+	/* load the report window */
+	xml = gst_tool_load_glade_common (tool, "report_window");
 
-	tool->report_window     = glade_xml_get_widget (xml, "report_window");
+	tool->report_window = glade_xml_get_widget (xml, "report_window");
 	g_signal_connect (G_OBJECT (tool->report_window), "delete_event",
 			  G_CALLBACK (report_window_close_cb), tool);
 
-	tool->report_label      = glade_xml_get_widget (xml, "report_label");
+	tool->report_label    = glade_xml_get_widget (xml, "report_label");
+	tool->report_progress = glade_xml_get_widget (xml, "report_progress");
+	tool->report_pixmap   = glade_xml_get_widget (xml, "report_pixmap");
 
+	pixbuf = gtk_icon_theme_load_icon (tool->icon_theme, "gnome-system-config", 48, 0, NULL);
+	gtk_image_set_from_pixbuf (GTK_IMAGE (tool->report_pixmap), pixbuf);
+	gdk_pixbuf_unref (pixbuf);
+
+	/* load the platforms list */
 	xml = gst_tool_load_glade_common (tool, "platform_dialog");
 	tool->platform_list = glade_xml_get_widget (xml, "platform_list");
 	gst_tool_create_platform_list (GTK_TREE_VIEW (tool->platform_list), tool);
@@ -1238,6 +1260,7 @@ gst_tool_type_init (GstTool *tool)
 	tool->platform_dialog    = glade_xml_get_widget (xml, "platform_dialog");
 	tool->platform_ok_button = glade_xml_get_widget (xml, "platform_ok_button");
 
+	/* load the remote config dialog */
 	xml = gst_tool_load_glade_common (tool, "remote_dialog");
 	tool->remote_dialog = glade_xml_get_widget (xml, "remote_dialog");
 	tool->remote_hosts_list = glade_xml_get_widget (xml, "remote_hosts_list");
@@ -1599,49 +1622,51 @@ is_string_complete (gchar *str, GSList *list)
 }
 
 static gchar*
-gst_tool_read_from_backend_va (GstTool *tool, gchar *needle, va_list ap)
+read_everything (GstTool *tool, gchar *needle, va_list ap)
 {
-	GString *str = g_string_new ("");
-	gboolean may_exit = FALSE;
-	gint i = 0;
-	gchar c, *ptr, *arg;
-	GSList *list = NULL;
+	GString *str  = g_string_new ("");
+	GSList  *list = NULL;
+	gchar   *arg, *ptr, c;
 
 	list = g_slist_prepend (list, needle);
 
 	while ((arg = va_arg (ap, char*)) != NULL)
 		list = g_slist_prepend (list, arg);
+
 	va_end (ap);
 
 	while (!is_string_complete (str->str, list)) {
 		c = fgetc (tool->read_stream);
-		i++;
 
-		if (*str->str)
+		if (c != EOF)
 			g_string_append_c (str, c);
-		else {
-			/* the string is still empty, read with O_NONBLOCK until
-			 *  it gets a char, this is done for not blocking the UI
-			 */
-			if (c != EOF) {
-				g_string_append_c (str, c);
-			}
-			
-			usleep (500);
-		}
-
-		/* ugly hack for redrawing UI without too much overload */
-		if (i == REDRAW_NCHARS) {
-			while (gtk_events_pending ())
-				gtk_main_iteration ();
-			i = 0;
-		}
 	}
 
 	ptr = str->str;
 	g_string_free (str, FALSE);
 
 	return ptr;
+}
+
+static void
+poll_backend (GstTool *tool)
+{
+	struct pollfd fd;
+
+	fd.fd = tool->read_fd;
+	fd.events = POLLIN || POLLPRI;
+
+	while (poll (&fd, 1, 100) <= 0) {
+		while (gtk_events_pending ())
+			gtk_main_iteration ();
+	}
+}
+
+static gchar*
+gst_tool_read_from_backend_va (GstTool *tool, gchar *needle, va_list ap)
+{
+	poll_backend (tool);
+	return read_everything (tool, needle, ap);
 }
 
 gchar*
@@ -1653,15 +1678,13 @@ gst_tool_read_from_backend (GstTool *tool, gchar *needle, ...)
 	return gst_tool_read_from_backend_va (tool, needle, ap);
 }
 
-gchar*
+static gchar*
 gst_tool_read_line_from_backend (GstTool *tool)
 {
 	gchar line[1000];
 
+	poll_backend (tool);
 	fgets (line, 1000, tool->read_stream);
-
-	while (gtk_events_pending ())
-		gtk_main_iteration ();
 
 	return g_strdup (line);
 }
@@ -1730,4 +1753,53 @@ gst_tool_show_help (GstTool *tool, gchar *section)
 	}
 
 	g_free (help_file);
+}
+
+static gboolean
+gst_tool_report_progress_animate (GstTool *tool)
+{
+	gtk_progress_bar_pulse (GTK_PROGRESS_BAR (tool->report_progress));
+	return TRUE;
+}
+
+static gboolean
+gst_tool_report_window_timeout (GstTool *tool)
+{
+	gtk_window_set_transient_for (GTK_WINDOW (tool->report_window), GTK_WINDOW (tool->main_dialog));
+	gtk_widget_show (tool->report_window);
+	tool->report_timeout_id = 0;
+	return FALSE;
+}
+
+static void
+gst_tool_show_report_window (GstTool *tool, const gchar *report)
+{
+	gchar *markup;
+
+	g_return_if_fail (tool->report_timeout_id == 0);
+
+	if (report) {
+		markup = g_strdup_printf ("<span weight=\"bold\" size=\"larger\">%s</span>", report);
+		gtk_label_set_markup (GTK_LABEL (tool->report_label), markup);
+		g_free (markup);
+
+		tool->report_timeout_id = g_timeout_add (2000, (GSourceFunc) gst_tool_report_window_timeout, tool);
+		tool->report_animate_id = g_timeout_add (150,  (GSourceFunc) gst_tool_report_progress_animate, tool);
+	}
+}
+
+static void
+gst_tool_hide_report_window (GstTool *tool)
+{
+	if (tool->report_timeout_id) {
+		g_source_remove (tool->report_timeout_id);
+		tool->report_timeout_id = 0;
+	}
+
+	if (tool->report_animate_id) {
+		g_source_remove (tool->report_animate_id);
+		tool->report_animate_id = 0;
+	}
+
+	gtk_widget_hide (tool->report_window);
 }
